--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "main": "NodeBB/app.js",
   "scripts": {
-    "start": "git clone https://github.com/NodeBB/NodeBB && cp setup.json NodeBB/config.json",
-    "setup": "NodeBB/nodebb setup",
-    "update": "NodeBB/nodebb upgrade",
-    "dev": "NodeBB/nodebb dev",
+    "install": "git clone https://github.com/NodeBB/NodeBB && cp setup.json NodeBB/config.json",
+    "start": "./NodeBB/nodebb upgrade",
+    "setup": "./NodeBB/nodebb setup",
+    "dev": "./NodeBB/nodebb dev",
     "ok": "node NodeBB/app"
   },
   "dependencies": {
