--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "main": "NodeBB/app.js",
   "scripts": {
     "install": "git clone https://github.com/NodeBB/NodeBB && cp setup.json NodeBB/config.json",
-    "start": "./NodeBB/nodebb setup",
-    "dev": "./NodeBB/nodebb upgrade && ./NodeBB/nodebb dev",
+    "start": "./NodeBB/nodebb upgrade",
+    "dev": "./NodeBB/nodebb setup && ./NodeBB/nodebb dev",
     "ok": "node NodeBB/app"
   },
   "dependencies": {
