--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "install": "git clone https://github.com/NodeBB/NodeBB && cp setup.json NodeBB/config.json",
     "start": "./NodeBB/nodebb upgrade",
     "dev": "./NodeBB/nodebb setup && ./NodeBB/nodebb dev",
-    "ok": "node NodeBB/app"
+    "ok": "./NodeBB/nodebb setup && node NodeBB/app"
   },
   "dependencies": {
     "debug": "^3.1.0"
